--- a/src/components/table.scss
+++ b/src/components/table.scss
@@ -1,11 +1,6 @@
 @font-face {
-  font-family: Sanchez;
-  src: url("../fonts/Sanchez/Sanchez-Regular.ttf");
-}
-
-@font-face {
-  font-family: Montserrat;
-  src: url("../fonts/Montserrat/Montserrat-Medium.ttf");
+  font-family: Cardo;
+  src: url("../fonts/Cardo/Cardo-Regular.ttf");
 }
 
 .table-wrapper {
@@ -65,7 +60,7 @@
     }
     td,
     th {
-      font-family: Sanchez;
+      font-family: Cardo;
       padding: 1rem;
       border-bottom: 1px solid #515151;
       text-align: left;
@@ -78,7 +73,7 @@
         color: #d4380d;
         background-color: #fff2e8;
         outline: 1px solid #d69470;
-        font-family: Montserrat;
+        font-family: Cardo;
         border: none;
         &:hover {
           background-color: #b74525;
@@ -92,7 +87,7 @@
       .action-container {
         display: flex;
         gap: 0.6rem;
-        font-family: Montserrat;
+        font-family: Cardo;
         img {
           width: 16px;
           &:hover {
@@ -102,7 +97,7 @@
       }
     }
     th {
-      font-family: Montserrat;
+      font-family: Cardo;
     }
     th:not(:last-child) {
       border-right: 1px solid #515151;
@@ -122,7 +117,7 @@
     align-items: center;
     padding: 1rem 0.5rem 0.5rem 0;
     font-size: 1.4rem;
-    font-family: Montserrat;
+    font-family: Cardo;
 
     button {
       display: flex;
@@ -131,7 +126,7 @@
       padding: 0.5rem 1.5rem;
       cursor: pointer;
       font-size: 1rem;
-      font-family: Montserrat;
+      font-family: Cardo;
       img {
         width: 16px;
       }
