--- a/src/pages/browse.scss
+++ b/src/pages/browse.scss
@@ -1,11 +1,6 @@
 @font-face {
-  font-family: Sanchez;
-  src: url("../fonts/Sanchez/Sanchez-Regular.ttf");
-}
-
-@font-face {
-  font-family: Montserrat;
-  src: url("../fonts/Montserrat/Montserrat-Medium.ttf");
+  font-family: Cardo;
+  src: url("../fonts/Cardo/Cardo-Regular.ttf");
 }
 
 .browse-wrapper {
@@ -20,7 +15,7 @@
     gap: 0.5rem;
     margin: 1rem;
     cursor: pointer;
-    font-family: Montserrat;
+    font-family: Cardo;
     img {
       width: 15px;
     }
@@ -35,7 +30,7 @@
       max-width: 25%;
       max-height: 74vh;
       h3 {
-        font-family: Montserrat;
+        font-family: Cardo;
         margin: 0 0 1rem 0;
         padding-bottom: 0.2rem;
         border-bottom: 1px solid #4e2f20;
@@ -55,7 +50,7 @@
           }
           label {
             color: #4e2f20;
-            font-family: Sanchez;
+            font-family: Cardo;
           }
         }
       }
@@ -70,7 +65,7 @@
       margin: 1rem 2rem 1rem 1rem;
       input,
       button {
-        font-family: Montserrat;
+        font-family: Cardo;
         width: 80%;
         padding: 0.5rem;
         display: flex;
@@ -84,7 +79,7 @@
       input {
         justify-content: center;
         font-size: 1rem;
-        font-family: Montserrat;
+        font-family: Cardo;
       }
     }
   }
