--- a/src/pages/search.scss
+++ b/src/pages/search.scss
@@ -1,18 +1,13 @@
 @font-face {
-  font-family: Sanchez;
-  src: url("../fonts/Sanchez/Sanchez-Regular.ttf");
-}
-
-@font-face {
-  font-family: Montserrat;
-  src: url("../fonts/Montserrat/Montserrat-Medium.ttf");
+  font-family: Cardo;
+  src: url("../fonts/Cardo/Cardo-Regular.ttf");
 }
 
 .search-wrapper {
   width: 100%;
   height: 100%;
   color: #4e2f20;
-  font-family: Sanchez;
+  font-family: Cardo;
   form {
     display: flex;
     gap: 1rem;
@@ -59,7 +54,7 @@
         }
         input {
           cursor: pointer;
-          font-family: Sanchez;
+          font-family: Cardo;
         }
         input[type="text"],
         input[type="number"] {
@@ -69,14 +64,14 @@
         select {
           cursor: pointer;
           width: 100%;
-          font-family: Sanchez;
+          font-family: Cardo;
         }
         input[type="submit"] {
           width: auto;
           padding: 0.1rem 0.7rem;
           text-align: center;
           font-size: 1rem;
-          font-family: Montserrat;
+          font-family: Cardo;
         }
       }
       .closer {
